:bug: #169 - fix: correct swim lane alignment when wrapping titles

--- a/src/components/data/kanban/kanban.scss
+++ b/src/components/data/kanban/kanban.scss
@@ -86,3 +86,15 @@
     }
   }
 }
+
+@media screen and (min-width: 768px) {
+  
+  .mykn-kanban {
+  &__body .mykn-h3 {
+    min-height: 100px;
+  }
+
+  &__body .mykn-badge--rounded {
+    align-self: center;
+  }
+}}
